services/envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                generate_request_id: true
                tracing:
                  custom_tags:
                    - tag: job
                      literal:
                        value: app/envoy
                  provider:
                    name: envoy.tracers.zipkin
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                      collector_cluster: jaeger
                      collector_endpoint: "/api/v2/spans"
                      shared_span_context: true
                      collector_endpoint_version: HTTP_JSON
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    log_format:
                      json_format: 
                        "@timestamp": "%START_TIME%"
                        host:
                          hostname: "%HOSTNAME%"
                        trace_id: "%REQ(X-B3-TRACEID)%"
                        span_id: "%REQ(X-B3-SPANID)%"
                        http:
                          request:
                            body:
                              bytes: "%BYTES_RECEIVED%"
                            duration: "%DURATION%"
                            duration_req: "%REQUEST_DURATION%"
                            headers:
                              accept: "%REQ(ACCEPT)%"
                              authority: "%REQ(:AUTHORITY)%"
                              content-length: "%REQ(CONTENT-LENGTH)%"
                              content-type: "%REQ(CONTENT-TYPE)%"
                              host: "%REQ(HOST)%"
                              id: "%REQ(X-REQUEST-ID)%"
                              session-id: "%REQ(SESSION-ID)%"
                              correlation-id: "%REQ(CORRELATION-ID)%"
                              x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                              x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
                              x_envoy_internal: "%REQ(X-ENVOY-INTERNAL)%"
                              x_envoy_decorator_operation: "%REQ(X-ENVOY-DECORATOR-OPERATION)%"
                              x_envoy_expected_rq_timeout_ms: "%REQ(X-ENVOY-EXPECTED-RQ-TIMEOUT-MS)%"
                              x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                              x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
                              x_b3_spanid: "%REQ(X-B3-SPANID)%"
                              x_b3_sampled: "%REQ(X-B3-SAMPLED)%"
                            method: "%REQ(:METHOD)%"
                            path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /products.v1.ProductsService
                          route:
                            cluster: products_service
                        - match:
                            prefix: /reviews.v1.ReviewsService
                          route:
                            cluster: reviews_service
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        # expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                use_remote_address: true
  clusters:
    - name: products_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: products_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: products
                      port_value: 50051

    - name: reviews_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: reviews_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: reviews
                      port_value: 50051

    - name: jaeger
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: jaeger
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: jaeger
                      port_value: 9411
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

node:
  id: "front-proxy"
  cluster: "front-proxy"

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
